# kuci-automation

./: .gitignore  README.md  app.py  database.db  git_beginner's_guide.md  package-lock.json  template.pptx
backend/: app.py  board_infos.py  config.py  database.db  main.py  models.py  ppt_maker.py  pyproject.toml  requirements.txt  scraper.py  template.pptx  writer.py
backend/instance/: mydatabase.db
backend/src/: app.py  database.db
backend/src/database/: db.py  models.py
backend/src/modules/: ai_summarizer.py  scraper.py  writer.py
backend/src/routes/: announcement.py  board.py  summarize.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  BoardList.jsx  CreateResultsFrom.jsx  UpdateBoardsForm.jsx  index.css  reset.css
