[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
]
